# quietroom

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-14-quietroom-engine.md
docs/superpowers/specs/: 2026-06-14-quietroom-design.md
quietroom/: __init__.py  bands.py  cli.py  scan.py
quietroom/audio/: __init__.py  capture.py  signal.py
quietroom/engine/: __init__.py  baseline.py  pipeline.py  score.py  spectrum.py
quietroom/engine/detectors/: __init__.py  audio_corr.py  catalog.py  diff.py  signatures.py
quietroom/radio/: __init__.py  device.py  hackrf.py  parse.py  recorded.py
quietroom/web/: __init__.py  app.py  session.py
quietroom/web/static/: app.js  style.css
quietroom/web/templates/: index.html
tests/: test_am_envelope.py  test_audio_corr.py  test_audio_correlation_test.py  test_audio_pkg.py  test_bands.py  test_baseline.py  test_catalog.py  test_cli.py  test_cli_investigate.py  test_device.py  test_diff.py  test_fm_envelope.py  test_frontend_assets.py  test_hackrf_cmd.py  test_hackrf_sweep.py  test_investigate.py  test_iq_convert.py  test_lag_correlation.py  test_parse_sweep_line.py  test_pipeline.py  test_play_and_record.py  test_recorded.py  test_scan.py  test_score.py  test_session.py  test_signal_basics.py  test_signatures.py  test_smoke.py  test_spectrum.py  test_streaming_demo.py  test_sweep_accumulator.py  test_sweep_worker.py  test_web_app.py  test_web_live_device.py  test_web_main.py  test_web_pkg.py  test_web_socket.py
