[project]
name = "quietroom"
version = "0.1.0"
description = "Receive-only HackRF TSCM bug-sweep tool"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quietroom"]
