[project]
name = "quietroom"
version = "0.1.0"
description = "Receive-only HackRF TSCM bug-sweep tool"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.11",
    "sounddevice>=0.4",
    "flask>=3.0",
    "flask-socketio>=5.4",
    "simple-websocket>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
quietroom = "quietroom.cli:main"
quietroom-web = "quietroom.web.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quietroom"]
